# logger_lambda

./: Cargo.toml
src/: lib.rs  main.rs
src/models/: input_message.rs  mod.rs
src/processors/: bet_offer_processor.rs  mod.rs  outcome_processor.rs
src/services/: dynamodb_service.rs  errors.rs  formatters.rs  message_factory.rs  mod.rs  redis_client.rs  s3_client.rs
src/services/s3/: s3_client.rs
src/test/: dynamodb_event.json
src/utils/: logger.rs
