[package]
name = "logger_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.11.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
rusoto_dynamodb = "0.48.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
mockall = "0.12"
log = "0.4.21"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-json = "2.6.1"
slog-async = "2.8.0"
slog-term = "2.9.1"
slog-stdlog = "4.1.1"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
aws-sdk-s3 = "1.38.0"
aws-config = "1.5.3"
aws-types = "1.3.2"
bytes = "1.6.0"
aws-smithy-types = "1.2.0"
chrono = "0.4.38"
aws-sdk-dynamodb = "1.37.0"
serde_dynamo = "4.2.14"
